Good news: It's mostly seamless.
Bad news: You gotta add another style tag in the html document.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 	}
 </script>
-<!--<style>if-chrome[minv="69"][maxv$="71"]{color:blue}</style><!---->
+<style>if-ie, if-edge, if-firefox, if-chrome, if-custom{display: none;}</style>
 </head>
 <body>
 ???
