Added a license and a README.
Todo: Make index.html not garbage.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@ div.content{
 </head>
 <body>
 <h1 id="header">browserElements.js</h1>
-<div class="content">Lorem ipsum</div>
-<div class="content">Lorem ipsum</div>
-<div class="content">Lorem ipsum</div>
-<div class="content">Lorem ipsum</div>
+<div class="content"></div>
 </body>
 </html>
